# Nirrpe

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pre-commit  rust-toolchain  rust-toolchain.toml  zero.nir
doc/: planning.md
nirrpe/: Cargo.toml
nirrpe-repl/: Cargo.toml
nirrpe-repl/src/: main.rs  zero.nirrpe
nirrpe/src/: lib.rs  main.rs  schema.rs
nirrpe/src/parse/: ast.rs  function.rs  ident.rs  lexer.rs  lit.rs  mod.rs  modifier.rs  nirrpe.pest  token.rs  util.rs  utils.rs
nirrpe/src/parse/lexer/: numbers.rs  text.rs  token.rs
nirrpe/src/runtime/: error.rs  mod.rs  utils.rs  value.rs
nirrpe/src/std/: std.nirrpe
nirrpe/src/tests/: mod.rs  test_character_schema.toml
nirrpe_launcher/: Cargo.toml
