[package]
name = "nirrpe-repl"
version = "0.1.0"
edition = "2021"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arc-blroth/nirrpe"
description = "A test interpreter for the Nirrpe programming language"

[dependencies]
nirrpe = { path = "../nirrpe" }
