[package]
name = "nirrpe"
version = "0.1.0"
edition = "2021"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arc-blroth/nirrpe"
description = "automated roleplay language"

[dependencies]
anyhow = "1.0.71"
ariadne = { version = "0.3.0", features = ["auto-color"] }
bitflags = "2.3.2"
chumsky = { version = "1.0.0-alpha.4", features = ["label"] }
enum-assoc = "1.1.0"
unicode-normalization = "0.1.22"
